plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.5.1'
}

group 'org.easysoc'
version pluginVersion

sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.antlr:antlr4-runtime:4.9.3'
    implementation 'org.antlr:antlr4-intellij-adaptor:0.1'

    implementation 'org.eclipse.sprotty:org.eclipse.sprotty:0.9.1'
    implementation 'org.eclipse.elk:org.eclipse.elk.graph.text:0.7.1'
    implementation 'org.eclipse.elk:org.eclipse.elk.alg.layered:0.7.1'
    implementation 'com.google.code.gson:gson:2.9.0'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    // version and localPath should not be specified at the same time
    // version = '2021.3.3'
    localPath = "/home/itviewer/Downloads/software/idea-IC"
    sandboxDir = "/home/itviewer/IdeaProjects/plugins-sandbox"

    // plugins = ['PsiViewer:213-SNAPSHOT']
    // downloadSources false
}

runIde {
    ideDir = project.file('/home/itviewer/Downloads/software/idea-IC')
    //for jbr11
    jvmArgs '--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED','-Djdk.module.illegalAccess.silent=true'
}

patchPluginXml {
    sinceBuild = '213'
    untilBuild = '221.*'
}

prepareSandbox {
    from('src/main/webapp') {
        into "${intellij.pluginName.get()}/webapp/"
    }
}

buildSearchableOptions.onlyIf { false }
jarSearchableOptions.onlyIf { false }

//prepareSandbox.onlyIf { false }
